--- a/03-gifs-app/src/app/shared/components/sidebar/sidebar.component.html
+++ b/03-gifs-app/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,1 +1,10 @@
-<h1>SIDEBAR</h1>
+<div class="bg-dark border-right p-3" id="sidebar">
+  <h3>GifsApp</h3>
+  <hr>
+
+  <div class="list-group list-reset">
+    <button class="list-group-item list-group-item-action">
+      Valorant
+    </button>
+  </div>
+</div>
