--- a/03-gifs-app/src/app/app.component.html
+++ b/03-gifs-app/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="d-flex">
+  <!-- Sidebar -->
   <shared-sidebar></shared-sidebar>
-  <gifs-home-page></gifs-home-page>
+
+  <!-- Home Page -->
+  <gifs-home-page class="flex-fill"></gifs-home-page>
 
 
 </div>
