--- a/03-gifs-app/src/app/gifs/pages/home/home-page.component.html
+++ b/03-gifs-app/src/app/gifs/pages/home/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="row p-3">
   <div class="col-12">
-    <!-- Busqueda -->
+    <gifs-search-box></gifs-search-box>
     1
   </div>
   <div class="col-12 pt-2">
