03-estructura proyecto, @ViewChild y referenciaLocal(#), input events, pipes, LocalStorage, Image Loader

--- a/03-gifs-app/src/app/shared/components/sidebar/sidebar.component.html
+++ b/03-gifs-app/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,8 +3,11 @@
   <hr>
 
   <div class="list-group list-reset">
-    <button class="list-group-item list-group-item-action">
-      Valorant
+    <button
+      *ngFor="let tag of tags"
+      (click)="searchTag(tag)"
+      class="list-group-item list-group-item-action">
+      {{ tag | titlecase }}
     </button>
   </div>
 </div>
