--- a/03-gifs-app/src/app/gifs/pages/home/home-page.component.html
+++ b/03-gifs-app/src/app/gifs/pages/home/home-page.component.html
@@ -1,10 +1,8 @@
 <div class="row p-3">
   <div class="col-12">
     <gifs-search-box></gifs-search-box>
-    1
   </div>
   <div class="col-12 pt-2">
-    <!-- Listado Gifs -->
-    2
+    <gifs-card-list [gifs]="gifs"></gifs-card-list>
   </div>
 </div>
