12- custom pipes, transform, value, ...arg ( : )

--- a/05-pipesApp/src/app/app.component.html
+++ b/05-pipesApp/src/app/app.component.html
@@ -2,6 +2,7 @@
   <p-button (onClick)="router.navigate(['/'])">Basic</p-button>
   <p-button (onClick)="router.navigate(['/numbers'])">Numeric</p-button>
   <p-button (onClick)="router.navigate(['/uncommon'])">Uncommon</p-button>
+  <p-button (onClick)="router.navigate(['/custom'])">Custom</p-button>
   <router-outlet></router-outlet>
 </section>
 
